<resources>
    <string name="app_name">Khedma</string>
    <string name="intro_title">Welcome To\nKhedma App</string>
    <string name="intro_text">Find out the best\nand nearest entreprises\nand order the most delicious\nfood that comes to your home</string>
    <string name="start">Start</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="login_title">Let\'s Login</string>
    <string name="login_text">Don\'t have an account? Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="register_title">Let\'s Register</string>
    <string name="register_text">Do you have an account? Log in</string>
    <string name="full_name">Full Name</string>
    <string name="emaill">email</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="forgot_password_text">Enter your email to receive\na password reset code</string>
    <string name="send">Send</string>
    <string name="code_verification_title">Enter security code</string>
    <string name="code_verification_text">Please check your email for a message\nwith your code. We sent your code to:</string>
    <string name="code">Code</string>
    <string name="continue_string">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="reset_password_title">Reset Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm">Confirm</string>
    <string name="new_password">New Password</string>
    <string name="account_verification_title">Your account has\n not been verified yet</string>
    <string name="logout">Logout</string>
    <string name="verify_account">Verify Account</string>
    <string name="save">Save</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="settings">Settings</string>
    <string name="laguage">Language</string>
    <string name="security">Security</string>
    <string name="change_password">Change Password</string>
    <string name="profile">Profile</string>
    <string name="edit_personal_details">Edit Personal Details</string>
    <string name="change_password_title">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="add_entreprise">Add Entreprise</string>
    <string name="add_entreprise_text">Please enter all required information\nfor your entreprise</string>
    <string name="restaurant_name">Entreprise Name</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
    <string name="select_image">Select Image</string>
    <string name="title">Title</string>
    <string name="my_entreprises">My Entreprises</string>
    <string name="information">Information</string>
    <string name="phone_number_label">Phone Number :</string>
    <string name="address_label">Address :</string>
    <string name="see_menu">See Menu</string>
    <string name="see_orders">See Orders</string>
    <string name="name">Name</string>
    <string name="edit_entreprise">Edit Entreprise</string>
    <string name="delete_entreprise">Delete Entreprise</string>
    <string name="facebook_app_id">650406550125086</string>
    <string name="fb_login_protocol_scheme">fb650406550125086</string>
    <string name="facebook_client_token">56789</string>
    <string name="see_comments">See Comments</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="upload_cover">Upload Cover</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>